# EnglishScoreManagerSystem

./: AnsQuestion.c  CMakeLists.txt  CalScore.c  DelInfo.c  InputQuestion.c  QueryScore.c  ShowScore.c  SortScore.c  SumScore.c  main.c
